ws-slo/apps/forgejo/components/monitoring/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-metrics
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: forgejo
      app.kubernetes.io/name: forgejo
  policyTypes:
    - Ingress
